--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
     "electron-log": "^5.1.0",
     "electron-window-state": "^5.0.3",
     "fs-extra": "^11.1.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "openai": "^3.1.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
